# hr_policies_rag_chatbot-

./: README.md  app.py  main.py  pyproject.toml
data/vector_store/: chroma.sqlite3
noteboook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  search.py  vectorstore.py
