[project]
name = "hr-policies-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.14.0",
    "ipykernel>=7.3.0",
    "jsonpatch>=1.33",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=0.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.35.0",
    "torchvision",
    "typesense>=2.0.0",
]
